apps/prod/rbx-flightdeck/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-flightdeck
  labels:
    app.kubernetes.io/part-of: rbx-flightdeck
